[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Icons/icon.png" type="Texture" id=1]
[ext_resource path="res://Enemy/SmallEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3125, 31 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 184.703, 17.9706 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 109.75, 44.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 47, 39 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2( -7.62939e-06, 2.23517e-08 )
scale = Vector2( 1.57009, 1.27332 )
shape = SubResource( 2 )

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0, -0.25 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
